use Stream.toList() over Stream.collect(toList())